tests/ui/parser/using_double_asterisk.sol
// ported-from: test/libsolidity/syntaxTests/using/double_asterisk.sol

using * for *; //~ ERROR: expected identifier
